# kubench

./: README.md  cluster.sh
.github/workflows/: build-n-push.yml  shellcheck.yml
applications/: build-n-push-all.sh
applications/raw-http-get/: README.md
applications/raw-http-get/go-std/: Dockerfile  go.mod  hpa.yaml  k8s.yaml  main.go
applications/raw-http-get/rust-actix/: Cargo.toml  Dockerfile  hpa.yaml  k8s.yaml
applications/raw-http-get/rust-actix/src/: main.rs
applications/raw-http-get/rust-hyper/: Cargo.toml  Dockerfile  hpa.yaml  k8s.yaml
applications/raw-http-get/rust-hyper/src/: main.rs
applications/raw-http-get/springboot/: Dockerfile  hpa.yaml  k8s.yaml
applications/rest-petstore/go-induzo/: Dockerfile  go.mod  go.sum  hpa.yaml  k8s.yaml  main.go
applications/rest-petstore/ruby-on-rails/: Dockerfile  Gemfile  hpa.yaml  k8s.yaml
applications/rest-petstore/rust-dropshot/: Cargo.toml  Dockerfile  hpa.yaml  k8s.yaml
applications/rest-petstore/rust-dropshot/src/: main.rs
bencher/: Dockerfile  k8s.yaml
benches/raw-http-get/: README.md  bench.sh  results_go-std_bench.md  results_rust-actix_bench.md  results_rust-hyper_bench.md  results_springboot_bench.md
benches/raw-http-get-max/: README.md  bench.sh  results_go-std_bench.md  results_rust-actix_bench.md  results_rust-hyper_bench.md  results_springboot_bench.md
benches/rest-petstore-max/: bench.sh  results_go-induzo_bench.md  results_ruby-on-rails_bench.md  results_rust-dropshot_bench.md
scripts/: applications.sh  bencher.sh  digital-ocean.sh  k3s-label.sh  metrics_do_values.yaml
(+16 files in other folders)
